src/objects/c2g__codaPaymentTemplateLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppaymenttemplate</customHelpPage>
    <description>Defines a template for a new payment proposal.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Template Line Items</relationshipLabel>
        <relationshipName>PaymentTemplateLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentTemplateName__c</fullName>
        <label>Payment Template</label>
        <referenceTo>c2g__codaPaymentTemplate__c</referenceTo>
        <relationshipLabel>Payment Template Line Items</relationshipLabel>
        <relationshipName>PaymentTemplateLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Template Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Template Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Template Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>